force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/Business_Area_SA__c.field-meta.xml
<CustomField>
    <fullName>Business_Area_SA__c</fullName>
    <formula>TEXT(Sales_Agreement_Product__r.SalesAgreement.Business_Area__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Area SA</label>
    <type>Text</type>
</CustomField>