force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/Condition_type2__c.field-meta.xml
<CustomField>
    <fullName>Condition_type2__c</fullName>
    <formula>Condition_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Condition Type</label>
    <type>Text</type>
</CustomField>