force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>Condition_Type__c</fullName>
    <formula>IF(ISBLANK( Trasport_price_lumpsum__c ),
 CASE(TEXT( Sales_Agreement_Product__r.Invoicing_Type__c ), &apos;Full delivered Price Shown Only&apos;,&apos;ZPT3&apos;,
&apos;Price components combined into one price excluding ESC which should be shown separately&apos;,&apos;ZPT3&apos;,
&apos;Prices combined into one price excluding transport price, which should be shown separately&apos;,&apos;ZPT0&apos;,
&apos;Prices combined into one price excluding ESC and Transport price, which should each be shown separately&apos;,&apos;ZPT0&apos;,
&apos;All prices shown separately&apos;,&apos;ZPT0&apos;,
&apos; &apos;), 
CASE(TEXT(Sales_Agreement_Product__r.Invoicing_Type__c ), &apos;Full delivered Price Shown Only&apos;,&apos;ZPT3&apos;,
&apos;Price components combined into one price excluding ESC which should be shown separately&apos;,&apos;ZPT3&apos;,
&apos;Prices combined into one price excluding transport price, which should be shown separately&apos;,&apos;ZPT7&apos;,
&apos;Prices combined into one price excluding ESC and Transport price, which should each be shown separately&apos;,&apos;ZPT7&apos;,
&apos;All prices shown separately&apos;,&apos;ZPT7&apos;,
&apos; &apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Condition Type</label>
    <type>Text</type>
</CustomField>