force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <formula>TEXT(Sales_Agreement_Product__r.SalesAgreement.CurrencyIsoCode)</formula>
    <label>Currency Code</label>
    <type>Text</type>
</CustomField>