force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/Drayage_Surcharge_per_uom__c.field-meta.xml
<CustomField>
    <fullName>Drayage_Surcharge_per_uom__c</fullName>
    <label>Drayage Surcharge  (per uom)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>