force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/Energy_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Energy_Surcharge__c</fullName>
    <inlineHelpText>As per Opera, Energy Surcharges can be shown or not on the invoice. This is determined by &apos;Invoice Type&apos; of the sale. When ESG are not shown to the customer, and are considered included in the product / base price it is requested that the ESG element is provided for internal reporting. This is known as ZPE1 in Opera. When an ESG is ZPE1, the ESG per unit price WILL NOT be added to the product price as it is assumed the price is already included in the product element</inlineHelpText>
    <label>Energy Surcharge (per unit)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>