force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/Energy_Surcharge_Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>Energy_Surcharge_Condition_Type__c</fullName>
    <formula>Sales_Agreement_Product__r.Energy_Surcharge_Condition_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Energy Surcharge Condition Type</label>
    <type>Text</type>
</CustomField>