force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/Freight_Surcharge1__c.field-meta.xml
<CustomField>
    <fullName>Freight_Surcharge1__c</fullName>
    <formula>Freight_Surcharge__c</formula>
    <label>Freight Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>