force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/Freight_surcharge_Target_per_uom__c.field-meta.xml
<CustomField>
    <fullName>Freight_surcharge_Target_per_uom__c</fullName>
    <inlineHelpText>Not added at the per-unit level as they are standalone charges on the invoice</inlineHelpText>
    <label>Freight surcharge Lump Sum (Target)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>