force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/Full_delivered_Price_Exc_Surcharge1__c.field-meta.xml
<CustomField>
    <fullName>Full_delivered_Price_Exc_Surcharge1__c</fullName>
    <formula>Full_delivered_Price_exc_surcharge__c</formula>
    <label>Full delivered Price- Exc Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>