force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/ICMS_target__c.field-meta.xml
<CustomField>
    <fullName>ICMS_target__c</fullName>
    <label>ICMS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>