force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/IFS_Old_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>IFS_Old_Start_Date__c</fullName>
    <label>IFS Old Start Date</label>
    <type>Date</type>
</CustomField>