force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/JDE_Old_End_Date__c.field-meta.xml
<CustomField>
    <fullName>JDE_Old_End_Date__c</fullName>
    <label>JDE- Old End Date</label>
    <type>Date</type>
</CustomField>