force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/JDE_Previous_Freight_Start_date__c.field-meta.xml
<CustomField>
    <fullName>JDE_Previous_Freight_Start_date__c</fullName>
    <label>JDE Previous Freight Start date</label>
    <type>Date</type>
</CustomField>