force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/KMEIN_Condition_Unit__c.field-meta.xml
<CustomField>
    <fullName>KMEIN_Condition_Unit__c</fullName>
    <formula>Sales_Agreement_Product__r.KMEIN_Condition_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KMEIN - Condition Unit</label>
    <type>Text</type>
</CustomField>