force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/N_1__c.field-meta.xml
<CustomField>
    <fullName>N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>N+1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Agreement_Product_Prices3</relationshipName>
    <type>Lookup</type>
</CustomField>