force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/New_Energy_Surcharge_per_uom__c.field-meta.xml
<CustomField>
    <fullName>New_Energy_Surcharge_per_uom__c</fullName>
    <formula>Energy_Surcharge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Energy Surcharge (per uom)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>