force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/New_Freight_Surcharge_per_uom_opera__c.field-meta.xml
<CustomField>
    <fullName>New_Freight_Surcharge_per_uom_opera__c</fullName>
    <formula>Freight_Surcharge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Freight Surcharge (per uom)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>