force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/New_Freight_UM__c.field-meta.xml
<CustomField>
    <fullName>New_Freight_UM__c</fullName>
    <formula>Sales_Agreement_Product__r.Previous_Freight_UM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Freight - UM</label>
    <type>Text</type>
</CustomField>