force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/New_Full_delivered_Price_inc_surcharge__c.field-meta.xml
<CustomField>
    <fullName>New_Full_delivered_Price_inc_surcharge__c</fullName>
    <formula>Full_delivered_Price_inc_surcharge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Full delivered Price - inc surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>