force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/New_Total_Transport_Price_opera__c.field-meta.xml
<CustomField>
    <fullName>New_Total_Transport_Price_opera__c</fullName>
    <formula>Trasport_price_lumpsum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Total Transport Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>