force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/New_Transport_Price_per_unit_opera__c.field-meta.xml
<CustomField>
    <fullName>New_Transport_Price_per_unit_opera__c</fullName>
    <formula>TransportPricePerUnit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Transport Price (per unit)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>