force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/Opera_Old_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Opera_Old_Start_Date__c</fullName>
    <label>Opera - Old Start Date</label>
    <type>Date</type>
</CustomField>