force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/PIS_COFINS__c.field-meta.xml
<CustomField>
    <fullName>PIS_COFINS__c</fullName>
    <label>PIS/COFINS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>