force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/Previous_ESC_Date_Effet__c.field-meta.xml
<CustomField>
    <fullName>Previous_ESC_Date_Effet__c</fullName>
    <label>Previous ESC - Date Effet</label>
    <type>Date</type>
</CustomField>