force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/Product_Manager__c.field-meta.xml
<CustomField>
    <fullName>Product_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Agreement_Product_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>