force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/Sales_Agreement_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agreement_Name__c</fullName>
    <formula>Sales_Agreement_Product__r.SalesAgreement.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Agreement Name</label>
    <type>Text</type>
</CustomField>