force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/Sales_Agreement_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agreement_Number__c</fullName>
    <formula>Sales_Agreement_Product__r.Sales_Agreement_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Agreement Number</label>
    <type>Text</type>
</CustomField>