force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/Sales_Director__c.field-meta.xml
<CustomField>
    <fullName>Sales_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Agreement_Product_Prices2</relationshipName>
    <type>Lookup</type>
</CustomField>