force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Agreement_Product_Prices1</relationshipName>
    <type>Lookup</type>
</CustomField>