force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/Tech_SA__c.field-meta.xml
<CustomField>
    <fullName>Tech_SA__c</fullName>
    <formula>CASESAFEID(Sales_Agreement_Product__r.SalesAgreementId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_SA</label>
    <type>Text</type>
</CustomField>