force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/Total_Transport_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Transport_Price__c</fullName>
    <formula>Trasport_price_lumpsum__c</formula>
    <label>Total Transport Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>