force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/Transport_Price_Per_Container_Target__c.field-meta.xml
<CustomField>
    <fullName>Transport_Price_Per_Container_Target__c</fullName>
    <inlineHelpText>Not added at the per-unit level as they are standalone charges on the invoice</inlineHelpText>
    <label>Transport Price Lump Sum (Target)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>