force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/Transport_Price_per_unit_reports__c.field-meta.xml
<CustomField>
    <fullName>Transport_Price_per_unit_reports__c</fullName>
    <formula>TransportPricePerUnit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transport Price (per unit)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>