force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/Transport_price_Target_per_unit__c.field-meta.xml
<CustomField>
    <fullName>Transport_price_Target_per_unit__c</fullName>
    <formula>IF( NOT(ISBLANK( Transport_price_unit_base_target__c)), Transport_price_unit_base_target__c,0)</formula>
    <label>Transport price (Target per unit)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>