force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/TransportPricePerUnit__c.field-meta.xml
<CustomField>
    <fullName>TransportPricePerUnit__c</fullName>
    <formula>IF( NOT(ISBLANK( Transport_price_unit_base__c )), Transport_price_unit_base__c, 0)</formula>
    <label>Transport Price (per unit)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>