force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/Transportpriceunitbase__c.field-meta.xml
<CustomField>
    <fullName>Transportpriceunitbase__c</fullName>
    <formula>Transport_price_unit_base__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transport price unit base</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>