force-app/main/default/objects/Sales_Agreement_Product_Price__c/fields/Trasport_price_lumpsum__c.field-meta.xml
<CustomField>
    <fullName>Trasport_price_lumpsum__c</fullName>
    <inlineHelpText>Not added at the per-unit level as they are standalone charges on the invoice</inlineHelpText>
    <label>Transport Price Lump Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>